--- a/technical-test-api/pom.xml
+++ b/technical-test-api/pom.xml
@@ -6,7 +6,6 @@
         <groupId>fr.auchanretailfrance</groupId>
         <artifactId>technical-test</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/>
     </parent>
 
     <artifactId>technical-test-api</artifactId>
@@ -43,6 +42,12 @@
             <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.vaadin.external.google</groupId>
+            <artifactId>android-json</artifactId>
+            <version>0.0.20131108.vaadin1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
